Add: base character creation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,11 @@
 
   <body>
     <%= render 'shared/navbar' %>
+    <% flash.each do |type, msg| %>
+      <div class="alert alert-<%=type%>">
+        <%= msg %>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
