--- a/app/views/characters/show.html.slim
+++ b/app/views/characters/show.html.slim
@@ -1,2 +1,14 @@
-h1 Characters#show
-p Find me in app/views/characters/show.html.slim
+.container
+  .row
+    .col-4.offset-4.mt-5
+      .card
+        .card-body
+          h5.card-title== @character.name
+          ul.list-group.list-group-flush
+            li.list-group-item=="Poder: #{@character.power}"
+            li.list-group-item=="Ataque: #{@character.attack}"
+            li.list-group-item=="Fuerza: #{@character.strenght}"
+            li.list-group-item=="Carisma: #{@character.charisma}"
+            li.list-group-item=="Espíritu: #{@character.spirit}"
+            li.list-group-item=="Habilidad Especial: #{@character.special_skill}"
+            li.list-group-item=="Token: #{@character.token}"
