--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,4 +1,4 @@
 nav.navbar.navbar-dark.bg-dark
   .container-fluid
-    == link_to 'Yunari', '#', class: 'navbar-brand'
+    == link_to 'Yunari', root_path, class: 'navbar-brand'
     == link_to 'Iniciar sesión', '#', class: 'btn btn-primary'
