--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,17 +12,9 @@
 
   <body>
     <%= render 'shared/navbar' %>
-    <% flash.each do |type, msg| %>
-      <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-          <img src="..." class="rounded me-2" alt="...">
-          <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body">
-          <%= msg %>
-        </div>
-      </div>
-    <% end %>
-    <%= yield %>
+    <div class="container position-relative">
+      <%= render 'shared/toast' %>
+      <%= yield %>
+    </div >
   </body>
 </html>
