--- a/app/views/shared/_toast.html.erb
+++ b/app/views/shared/_toast.html.erb
@@ -1,10 +1,11 @@
 <% flash.each do |type, msg| %>
-  <div class="toast position-absolute text-white bg-<%= type %> border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex">
+  <div class="toast-container position-absolute top-0 end-0 p-3">
+    <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-body">
-        <%= msg %>
+        <div class="fas fa-check text-<%= type %>"></div>
+        <span class="text-secondary"><%= msg %></span>
+        <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
-      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   </div>
 <% end %>
