Add: login signin logout

--- a/app/assets/stylesheets/characters.scss
+++ b/app/assets/stylesheets/characters.scss
@@ -5,3 +5,12 @@
   color: #dc3545;
   font-size: .875em;
 }
+.form-signin{
+  width: 100%;
+  max-width: 330px;
+  padding: 15px;
+  margin: auto;
+}
+.bg-gray{
+  background-color: #eee;
+}
