--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -2,7 +2,10 @@ nav.navbar.navbar-dark.bg-dark
   .container-fluid
     == link_to 'Yunari', root_path, class: 'navbar-brand'
     - if user_signed_in?
-      == link_to 'Cerrar sesión', destroy_user_session(current_user), class: 'btn btn-primary'
+      == link_to 'Cerrar sesión', destroy_user_session_path(current_user), method: :delete, class: 'btn btn-primary'
     - else
-      == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-primary'
-      == link_to 'Crear cuenta', new_user_registration_path, class: 'btn btn-outline-primary'
+      ul.nav.justify-content-end
+        li.nav-item.mx-1
+          == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-primary'
+        li.nav-item
+          == link_to 'Crear cuenta', new_user_registration_path, class:  'btn btn-outline-primary'
