Add: character profile view

--- a/app/views/characters/new.html.slim
+++ b/app/views/characters/new.html.slim
@@ -2,9 +2,9 @@
 
 == form_for @character do |f|
   .row
-    .col-10.offset-1.mt-3
-      h3 Crear personaje
-    .col-4.offset-1.mt-3
+    .col-md-10.col-xs-11.offset-md-1.mt-3
+      h4 Crear personaje
+    .col-md-4.col-xs-11.offset-md-1.mt-3
       .mb-3
         == f.label :name, 'Imagen', class: "form-label"
         == f.file_field :image, accept: 'image/png, image/gif, image/jpeg', class: "form-control", type: "file"
@@ -20,12 +20,14 @@
       .mb-3
         == f.label :race_id, 'Tipo', class: "form-label"
         == f.collection_select(:kind_id, Kind.all, :id, :name, {}, class: "form-select")
-    .col-4.offset-1.mt-3
+      .mb-3
+        == f.label :history, 'Historia', class: "form-label"
+        == f.text_area :history, class: "form-control"
+    .col-md-4.col-xs-11.offset-md-1.mt-3
       .mb-4.text-center
         p.lead
-          | Te quedan
-          strong#total_indicator.text-success.mx-2== calculate_remaining_points(@character)
-          | puntos por asignar
+          | Puntos por asignar
+          == number_field_tag :remaining_points, @remaining_points,  class: "total text-success", readonly: true   
       .mb-3
         == f.label :power, 'Poder', class: "form-label"
         == number_field_tag :power_indicator, @character.power,  class: "float-end indicator text-secondary"
@@ -47,7 +49,7 @@
         == number_field_tag :spirit_indicator, @character.spirit,  class: "float-end indicator text-secondary"
         == f.number_field :spirit, class: "form-range", type: "range", min: 100, max: 1000
   .row
-    .col-4.offset-1
+    .col-md-4.col-xs-11.offset-md-1
       .mb-3
         == f.submit 'Guardar', class: "btn btn-primary w-100"
 end
