--- a/app/assets/stylesheets/characters.scss
+++ b/app/assets/stylesheets/characters.scss
@@ -19,3 +19,10 @@
   border-radius: 5px;
   width: 25%;
 }
+.total{
+  border: none;
+  width: 25%;
+  border-radius: 5px;
+  background-color: #fff;
+  text-align: center;
+}
