Add: stylize card

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,11 @@
  *= require_tree .
  *= require_self
  */
+$primary: #9d4edd;
+$success:       #80ffdb;
+$info:          #4cc9f0;
+$warning:       #ff9e00;
+$danger:        #e5383b;
 @import "bootstrap/scss/bootstrap";
 $fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
