Add: edit character

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 $primary: #9d4edd;
-$success:       #80ffdb;
+$success:       #17c3b2;
 $info:          #4cc9f0;
 $warning:       #ff9e00;
 $danger:        #e5383b;
