--- a/app/views/characters/new.html.slim
+++ b/app/views/characters/new.html.slim
@@ -1,55 +1,4 @@
-
-
-== form_for @character do |f|
-  .row
-    .col-md-10.col-xs-11.offset-md-1.mt-3
-      h4 Crear personaje
-    .col-md-4.col-xs-11.offset-md-1.mt-3
-      .mb-3
-        == f.label :name, 'Imagen', class: "form-label"
-        == f.file_field :image, accept: 'image/png, image/gif, image/jpeg', class: "form-control", type: "file"
-      .mb-3
-        == f.label :name, 'Nombre', class: "form-label"
-        == f.text_field :name, class: "form-control", required: true
-      .mb-3
-        == f.label :special_skill, 'Habilidad Especial', class: "form-label"
-        == f.select :special_skill, options_for_select(['Resistencia al fuego', 'Resistencia al frio', 'Resistencia al veneno', 'Resistencia a la oscuridad', 'Movimiento acelerado', 'Crecimiento acelerado', 'Invocación de familiar']), {}, class: "form-select"
-      .mb-3
-        == f.label :race_id, 'Raza', class: "form-label"
-        == f.collection_select(:race_id, Race.all, :id, :name, {}, class: "form-select")
-      .mb-3
-        == f.label :race_id, 'Tipo', class: "form-label"
-        == f.collection_select(:kind_id, Kind.all, :id, :name, {}, class: "form-select")
-      .mb-3
-        == f.label :history, 'Historia', class: "form-label"
-        == f.text_area :history, class: "form-control"
-    .col-md-4.col-xs-11.offset-md-1.mt-3
-      .mb-4.text-center
-        p.lead
-          | Puntos por asignar
-          == number_field_tag :remaining_points, @remaining_points,  class: "total text-success", readonly: true   
-      .mb-3
-        == f.label :power, 'Poder', class: "form-label"
-        == number_field_tag :power_indicator, @character.power,  class: "float-end indicator text-secondary"
-        == f.number_field :power, class: "form-range", type: "range", min: 100, max: 1000 
-      .mb-3
-        == f.label :attack, 'Ataque', class: "form-label"
-        == number_field_tag :attack_indicator, @character.attack,  class: "float-end indicator text-secondary"
-        == f.number_field :attack, class: "form-range", type: "range", min: 100, max: 1000 
-      .mb-3
-        == f.label :strenght, 'Fuerza', class: "form-label"
-        == number_field_tag :strenght_indicator, @character.strenght,  class: "float-end indicator text-secondary"
-        == f.number_field :strenght, class: "form-range", type: "range", min: 100, max: 1000
-      .mb-3
-        == f.label :charisma, 'Carisma', class: "form-label"
-        == number_field_tag :charisma_indicator, @character.charisma,  class: "float-end indicator text-secondary"
-        == f.number_field :charisma, class: "form-range", type: "range", min: 100, max: 1000
-      .mb-3
-        == f.label :spirit, 'Espíritu', class: "form-label"
-        == number_field_tag :spirit_indicator, @character.spirit,  class: "float-end indicator text-secondary"
-        == f.number_field :spirit, class: "form-range", type: "range", min: 100, max: 1000
-  .row
-    .col-md-4.col-xs-11.offset-md-1
-      .mb-3
-        == f.submit 'Guardar', class: "btn btn-primary w-100"
-end
+.row
+  .col-md-10.col-xs-11.offset-md-1.mt-3
+    h4 Crear personaje
+== render 'form', method: :post
