--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,9 +1,14 @@
 nav.navbar.navbar-dark.bg-primary
   .container-fluid
     i.fas.fa-gamepad.text-white
+    i.fas.fa-moon.text-white
     == link_to 'Yunari', root_path, class: 'navbar-brand'
     - if user_signed_in?
-      == link_to 'Cerrar sesión', destroy_user_session_path(current_user), method: :delete, class: 'btn btn-primary'
+      ul.nav.justify-content-end
+        li.nav-item
+          == link_to 'Perfil', characters_path, class: 'nav-link text-white'
+        li.nav-item
+          == link_to 'Cerrar sesión', destroy_user_session_path(current_user), method: :delete, class: 'nav-link text-white'
     - else
       ul.nav.justify-content-end
         li.nav-item.mx-1
