--- a/app/views/characters/index.html.slim
+++ b/app/views/characters/index.html.slim
@@ -1,2 +1,21 @@
-h1 Characters#index
-p Find me in app/views/characters/index.html.slim
+.container
+  .row.mt-3
+    .col-md-12.col-xs-12
+      == link_to 'Crear personaje', new_character_path, class: 'btn btn-success btn-lg text-white'
+  .row.mt-3
+    - @characters.each do |character|
+      .col-md-3.col-xs-12
+        .shadow.p-3.mb-3.bg-body.rounded
+          - if user_signed_in? && current_user.owns?(character.user_id)
+            == link_to raw('<i class="fas fa-edit"></i>'), edit_character_path(character), class: "btn btn-primary float-end"
+          end
+          h3== character.name.capitalize
+          == image_tag url_for(character.image), class: "card-img-top rounded mt-3"
+          .row.mb-3.mt-3
+            .col-sm-12
+              .bg-light.p-3.border.rounded
+                == button_tag 'Copiar', class: "btn btn-outline-primary btn-sm float-end", data: { bs_toggle: "tooltip",  bs_placement:"top"}, title: "Copiar al portapapeles", id: "copy_link"
+                == link_to personajes_path(character.slug), personajes_path(character.slug)
+                .d-none
+                  == text_field_tag :link, "localhost:3000#{personajes_path(character.slug)}"
+    end
