--- a/app/views/shared/_toast.html.erb
+++ b/app/views/shared/_toast.html.erb
@@ -2,8 +2,8 @@
   <div class="toast-container position-absolute top-0 end-0 p-3">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-body">
-        <div class="fas fa-check text-<%= type %>"></div>
-        <span class="text-secondary"><%= msg %></span>
+        <i class="fas fa-check text-<%= type %> mx-2"></i>
+        <span class="fw-light"><%= msg %></span>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
     </div>
