--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,17 +1,26 @@
-nav.navbar.navbar-dark.bg-primary
+nav.navbar.navbar-dark.bg-primary.text-white
   .container-fluid
-    i.fas.fa-gamepad.text-white
-    i.fas.fa-moon.text-white
-    == link_to 'Yunari', root_path, class: 'navbar-brand'
+    ul.nav.justify-content-start
+      li.nav-item.mx-2
+        i.fas.fa-gamepad
+      li.nav-item.mx-2
+        == link_to 'Yunari', root_path, class: 'navbar-brand'
     - if user_signed_in?
       ul.nav.justify-content-end
-        li.nav-item
-          == link_to 'Perfil', characters_path, class: 'nav-link text-white'
-        li.nav-item
-          == link_to 'Cerrar sesión', destroy_user_session_path(current_user), method: :delete, class: 'nav-link text-white'
+        li.nav-item.dropdown
+          a#navDrop.nav-link.dropdown-toggle.text-white aria-expanded="false" data-bs-toggle="dropdown" href="#" role="button"
+            i.fas.fa-user-circle.text-white.mx-2
+            == current_user.email
+          ul.dropdown-menu aria-labelledby="navDrop"
+            li
+              == link_to 'Perfil', characters_path, class: 'dropdown-item text-white'
+            li
+              hr.dropdown-divider/
+            li
+              == link_to 'Cerrar sesión', destroy_user_session_path(current_user), method: :delete, class: 'dropdown-itemtext-white'
     - else
       ul.nav.justify-content-end
         li.nav-item.mx-1
-          == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success'
+          == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success text-white'
         li.nav-item
           == link_to 'Crear cuenta', new_user_registration_path, class:  'btn btn-outline-success'
