Add: edit account

--- a/app/views/characters/index.html.slim
+++ b/app/views/characters/index.html.slim
@@ -1,6 +1,6 @@
 .container
   .row.mt-3
-    .col-md-12.col-xs-12
+    .col-md-12.col-xs-12.mb-3
       == link_to 'Crear personaje', new_character_path, class: 'btn btn-success btn-lg text-white'
   .row.mt-3
     - @characters.each do |character|
