--- a/app/views/characters/edit.html.slim
+++ b/app/views/characters/edit.html.slim
@@ -1,7 +1,11 @@
 .row
-  .col-md-8.col-xs-8.offset-md-1.mt-3
-    h4 Editar personaje
-  .col-md-2.col-xs-4
-    == button_tag raw('<span><i class="fas fa-trash mx-2"></i>Eliminar</span>'), type: :button, class: "btn btn-danger text-white mt-3", id: "delete_character_btn"
-== render 'form', method: :put
+  .col-md-1.col-xs-4
+    == link_to :back, 'Volver', class: "btn btn-success text-white w-100 mt-3"
+  .col-md-10.col-xs-8.mt-3
+    .row
+      .col-md-8.offset-md-1.col-xs-8
+        h4 Editar personaje
+      .col-md-2.col-xs-4
+        == button_tag raw('<span><i class="fas fa-trash mx-2"></i>Eliminar</span>'), type: :button, class: "btn btn-danger text-white mt-3", id: "delete_character_btn"
+      == render 'form', method: :put
 == render 'modal'
