--- a/app/views/kinds/edit.html.slim
+++ b/app/views/kinds/edit.html.slim
@@ -1,2 +1,5 @@
-h1 Kinds#edit
-p Find me in app/views/kinds/edit.html.slim
+.row
+  .col-md-1.col-xs-4.mt-3
+    == link_to 'Volver', kinds_path, class: "btn btn-success text-white mb-3 w-100"
+  .col-md-4.offset-md-1.col-xs-8.mt-3
+    == render 'form'
