--- a/app/views/shared/_toast.html.erb
+++ b/app/views/shared/_toast.html.erb
@@ -2,7 +2,15 @@
   <div class="toast-container position-absolute top-0 end-0 p-3">
     <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="toast-body">
-        <i class="fas fa-check text-<%= type %> mx-2"></i>
+        <% if ['alert', 'warning'].include?(type) %>
+          <i class="fas fa-exclamation-triangle text-warning mx-2"></i>
+        <% elsif ['info', 'notice'].include?(type) %>
+          <i class="fas fa-info-circle text-info mx-2"></i>
+        <% elsif ['error', 'danger'].include?(type) %>
+          <i class="fas fa-times text-danger mx-2"></i>
+        <% else %>
+          <i class="fas fa-check text-success mx-2"></i>
+        <% end %>
         <span class="fw-light"><%= msg %></span>
         <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
       </div>
