--- a/app/views/kinds/index.html.slim
+++ b/app/views/kinds/index.html.slim
@@ -15,5 +15,5 @@
               == link_to raw('<i class="fas fa-edit"></i>'), edit_kind_path(kind), class: "btn btn-success btn-sm text-white mx-3"
               == button_tag raw('<i class="fas fa-trash"></i>'), class: "btn btn-danger btn-sm text-white delete_kind", data: { url: "#{kind_path(kind)}", linked: "deleteKind" }
 .modal#deleteKind tabindex="-1"
-  == render 'shared/modal', title: 'Eliminar Tipo', message: '¿Estás segur@ que deseas realizar esta acción?'
+  == render 'shared/modal', title: 'Eliminar Tipo', message: '¿Estás segur@ que deseas realizar esta acción?', url: kinds_path
               / ====== <3 <3 <3 ======
