--- a/app/views/races/index.html.slim
+++ b/app/views/races/index.html.slim
@@ -14,6 +14,7 @@
             td
               == link_to raw('<i class="fas fa-edit"></i>'), edit_race_path(race), class: "btn btn-success btn-sm text-white mx-3"
               == button_tag raw('<i class="fas fa-trash"></i>'), class: "btn btn-danger btn-sm text-white delete_race", data: { url: "#{race_path(race)}", linked: "deleteRace" }
-.modal#deleteRace tabindex="-1"
-  == render 'shared/modal', title: 'Eliminar Raza', message: '¿Estás segur@ que deseas realizar esta acción?'
+
+.modal#cancelAccount tabindex="-1"
+  == render 'shared/modal', title: 'Eliminar Raza', message: '¿Estás segur@ que deseas realizar esta acción?', url: races_path
               / ====== <3 <3 <3 ======
