--- a/app/views/shared/_modal.html.slim
+++ b/app/views/shared/_modal.html.slim
@@ -8,4 +8,4 @@
       p== message
     .modal-footer
       button.btn.btn-secondary data-bs-dismiss="modal" type="button"  Cancelar
-      == link_to 'Aceptar', races_path, method: :delete, class: "btn btn-primary delete-link"
+      == link_to 'Aceptar', url, method: :delete, class: "btn btn-primary delete-link"
