Add: responsiveness to home

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row text-center h-100 mt-5">
-  <div class="col-4 offset-4 form-signin mt-5">
+  <div class="col-md-4 col-sm-12  col-xs-12 offset-md-4 form-signin mt-5">
     <h1><i class="far fa-user text-primary"></i></h1>
     <h3 class="mb-3 fw-normal">Crear cuenta</h2>
 
