--- a/app/views/shared/_navbar.html.slim
+++ b/app/views/shared/_navbar.html.slim
@@ -1,28 +1,31 @@
-nav.navbar.navbar-dark.bg-primary.text-white
+nav.navbar.navbar-dark.navbar-expand-lg.bg-primary.text-white
   .container-fluid
     ul.nav.justify-content-start
       li.nav-item.mx-2
         i.fas.fa-gamepad
       li.nav-item.mx-2
         == link_to 'Yunari', root_path, class: 'navbar-brand'
-    - if user_signed_in?
-      ul.nav.justify-content-end
-        li.nav-item.dropdown
-          a#navDrop.nav-link.dropdown-toggle.text-white aria-expanded="false" data-bs-toggle="dropdown" href="#" role="button"
-            i.fas.fa-user-circle.text-white.mx-2
-            == current_user.email
-          ul.dropdown-menu aria-labelledby="navDrop"
-            li
-              == link_to 'Cuenta', profile_user_path(current_user), class: 'dropdown-item text-primary'
-            li
-              == link_to 'Personajes', characters_path, class: 'dropdown-item text-primary'
-            li
-              hr.dropdown-divider/
-            li
-              == link_to 'Cerrar sesión', destroy_user_session_path, method: :delete, class: 'dropdown-item text-primary'
-    - else
-      ul.nav.justify-content-end
-        li.nav-item.mx-1
-          == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success text-white'
-        li.nav-item
-          == link_to 'Crear cuenta', new_user_registration_path, class:  'btn btn-outline-success'
+    button.navbar-toggler aria-controls="mainNav" aria-expanded="false" aria-label=("Toggle navigation") data-bs-target="#mainNav" data-bs-toggle="collapse" type="button"
+        span.navbar-toggler-icon
+    #mainNav.collapse.navbar-collapse.justify-content-end
+      - if user_signed_in?
+        ul.nav
+          li.nav-item.dropdown
+            a#navDrop.nav-link.dropdown-toggle.text-white aria-expanded="false" data-bs-toggle="dropdown" href="#" role="button"
+              i.fas.fa-user-circle.text-white.mx-2
+              == current_user.email
+            ul.dropdown-menu aria-labelledby="navDrop"
+              li
+                == link_to 'Cuenta', profile_user_path(current_user), class: 'dropdown-item text-primary'
+              li
+                == link_to 'Personajes', characters_path, class: 'dropdown-item text-primary'
+              li
+                hr.dropdown-divider/
+              li
+                == link_to 'Cerrar sesión', destroy_user_session_path, method: :delete, class: 'dropdown-item text-primary'
+      - else
+        ul.nav.justify-content-end
+          li.nav-item.mx-1
+            == link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success text-white'
+          li.nav-item
+            == link_to 'Crear cuenta', new_user_registration_path, class:  'btn btn-outline-success'
