--- a/app/views/characters/_form.html.slim
+++ b/app/views/characters/_form.html.slim
@@ -17,6 +17,8 @@
         .mb-3
           == f.label :name, 'Nombre', class: "form-label"
           == f.text_field :name, class: "form-control", required: true, value: @character.name
+          - if @character.errors[:name].present?
+            span.is-invalid == @character.errors[:name].first
       end
       .mb-3
         == f.label :special_skill, 'Habilidad Especial', class: "form-label"
